Fix css alignment on the dropdown

--- a/src/main.css
+++ b/src/main.css
@@ -106,6 +106,7 @@ a.deco-none, a.deco-none:hover {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  right: 0; /* Align dropdown content to the right */
 }
 
 /* Style the links inside the dropdown */
@@ -114,6 +115,7 @@ a.deco-none, a.deco-none:hover {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  text-align: right; /* Align menu items to the right */
 }
 
 /* Change color on hover */
